# uvicorn-gunicorn-docker

./: README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docker-images/: python3.10-slim.dockerfile  python3.10.dockerfile  python3.8-slim.dockerfile  python3.8.dockerfile  python3.9-slim.dockerfile  python3.9.dockerfile  requirements.txt
scripts/: build-push.sh  build.sh  process_all.py  trigger-children.sh
tests/: utils.py
tests/test_01_main/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py  test_env_vars_3.py
tests/test_03_reload/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py
